--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,18 +8,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "pinia": "^2.1.7",
-    "axios": "^1.6.7",
-    "tailwindcss": "^3.4.1",
     "@heroicons/vue": "^2.1.1",
-    "@vueuse/core": "^10.9.0"
+    "@vueuse/core": "^10.9.0",
+    "axios": "^1.6.7",
+    "pinia": "^2.1.7",
+    "tailwindcss": "^3.4.1",
+    "vue": "^3.4.21",
+    "vue-i18n": "^11.2.8",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.1.4",
     "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35"
+    "postcss": "^8.4.35",
+    "vite": "^5.1.4"
   }
 }
